# cpp_tutorial

./: CMakeLists.txt
bitbake/meta-cpptutorial/conf/: bitbake.conf
bitbake/meta-cpptutorial/recipes-cpptutorial/: cpptutorial-test.bb  cpptutorial.bb
src/: main.cpp
test/: CMakeLists.txt  main.cpp
